--- a/src/Microsoft.Sbom.Adapters/Microsoft.Sbom.Adapters.csproj
+++ b/src/Microsoft.Sbom.Adapters/Microsoft.Sbom.Adapters.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ComponentDetection.Contracts" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Newtonsoft.Json" />
     <PackageReference Include="packageurl-dotnet" />
   </ItemGroup>
