--- a/src/Microsoft.Sbom.Contracts/Microsoft.Sbom.Contracts.csproj
+++ b/src/Microsoft.Sbom.Contracts/Microsoft.Sbom.Contracts.csproj
@@ -8,4 +8,9 @@
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>$(StrongNameSigningKeyFilePath)</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+    <PackageReference Include="Serilog.AspNetCore" />
+  </ItemGroup>
 </Project>
