--- a/src/Microsoft.Sbom.DotNetTool/Microsoft.Sbom.DotNetTool.csproj
+++ b/src/Microsoft.Sbom.DotNetTool/Microsoft.Sbom.DotNetTool.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Scrutor" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <PackageReference Include="Serilog.AspNetCore" />
