--- a/src/Microsoft.Sbom.Extensions/Microsoft.Sbom.Extensions.csproj
+++ b/src/Microsoft.Sbom.Extensions/Microsoft.Sbom.Extensions.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="System.Text.Json" />
   </ItemGroup>
 
